Started header and section 1

--- a/index.html
+++ b/index.html
@@ -1,21 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <div class="header">Header Logo
-        <ul>
-            <li><a href="#">Link1</a></li>
-            <li><a href="#">Link2</a></li>
-            <li><a href="#">Link3</a></li>
-        </ul>
 
+    <!--Header divs-->
+    <div class="header">
 
+        <div class="left-content">
+            <div>Header Logo</div>
+        </div>
+
+        <div class="right-content">
+            <ul>
+                <li><a href="#">Link1</a></li>
+                <li><a href="#">Link2</a></li>
+                <li><a href="#">Link3</a></li>
+            </ul>
+        </div>
     </div>
-    
+
+    <!--First Section of Webpage-->
+    <div class="section1">
+        <div class="section1-content">
+            <h1>This website is awesome</h1>
+            <p>This is a website and I have no idea what to put here</p>
+            <button class="sign-up">Sign Up</button>
+        </div>
+    </div>
+
+    <!--Second Section of Webpage-->
+    <div class="section2">
+        <h1>Some random info</h1>
+        <p>This is a website and I have no idea what to put here</p>
+    </div>
+
+    <!--Third Section of Webpage-->
+    <div class="section3">
+        <p>quote</p>
+    </div>
+
 </body>
+
 </html>
