Finished webpage, just adding the finishing touches

--- a/index.html
+++ b/index.html
@@ -33,18 +33,57 @@
             <p>This is a website and I have no idea what to put here</p>
             <button class="sign-up">Sign Up</button>
         </div>
+        <img src="images/placeholder_image.jpg" alt="placeholder">
     </div>
 
     <!--Second Section of Webpage-->
     <div class="section2">
-        <h1>Some random info</h1>
-        <p>This is a website and I have no idea what to put here</p>
+        <h1>Some random information</h1>
+
+        <div class="section2-images">
+            <div class="section2-image">
+                <img src="images/placeholder_image.jpg" alt="img1">
+                <p>this is some text under the image</p>
+            </div>
+
+            <div class="section2-image">
+                <img src="images/placeholder_image.jpg" alt="img2">
+                <p>this is some text under the image</p>
+            </div>
+
+            <div class="section2-image">
+                <img src="images/placeholder_image.jpg" alt="img3">
+                <p>this is some text under the image</p>
+            </div>
+
+            <div class="section2-image">
+                <img src="images/placeholder_image.jpg" alt="img4">
+                <p>this is some text under the image</p>
+            </div>
+        </div>
     </div>
 
     <!--Third Section of Webpage-->
     <div class="section3">
-        <p>quote</p>
+        <p class="quote">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat exercitationem tempora nisi
+            delectus. Commodi cupiditate molestiae facilis incidunt, facere, maxime sint ullam iure, repellendus
+            mollitia fuga eum natus assumenda dignissimos.</p>
+        <p>-By a random person</p>
     </div>
+
+    <div class="section4">
+        <div class="actionCall">
+            <div class="text">
+                <h2>Call to action! It's time!</h2>
+                <p>Sign up for our product by clicking that button over there!</p>
+            </div>
+            <button>Sign up</button>
+        </div>
+    </div>
+
+    <footer>
+        <p>Copyright &#169 The Odin Project 2021</p>
+    </footer>
 
 </body>
 
